# pltree

./: CMakeLists.txt  README.md
pltree/: CMakeLists.txt  test.sh
pltree-ff/: CMakeLists.txt  run.sh
pltree-ff/src/benchmark/: main.cpp  operation.h
pltree-ff/src/include/: builder.h  common.h  fast&fair.cpp  fast&fair.h  pltree.h  segment.h
pltree-ff/src/util/: allocator.h  utils.h
pltree-local/: CMakeLists.txt
pltree-local/src/benchmark/: bench_util.h  main.cpp  operation.h
pltree-local/src/include/: builder.h  common.h  pltree.h  segment.h
pltree-local/src/util/: allocator.h  uniform.h
pltree-n/: CMakeLists.txt
pltree-n/src/benchmark/: main.cpp  operation.h
pltree-n/src/include/: builder.h  common.h  pltree.h  segment.h
pltree-n/src/util/: allocator.h
pltree/src/benchmark/: main.cpp  operation.h
pltree/src/include/: builder.h  common.h  global.cpp  pltree.h  segment.h
pltree/src/util/: allocator.h
src/include/: builder.h  common.h  global.cpp  pltree.h  segment.h
src/util/: allocator.h  utils.h
